Gabelstr Nord: Add some Gnoll encounters

--- a/mod/area/gabelstr_nord_02.git.yml
+++ b/mod/area/gabelstr_nord_02.git.yml
@@ -183,6 +183,259 @@ Encounter List:
     XPosition: {type: :float, value: 25.8398990631104}
     YPosition: {type: :float, value: 97.265998840332}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0215000156313181}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.363689422607422}
+        Y: {type: :float, value: -4.34561109542847}
+        Z: {type: :float, value: 0.0215000156313181}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 16.2781867980957}
+        Y: {type: :float, value: -4.33577585220337}
+        Z: {type: :float, value: 0.0225600246340036}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 16.1703987121582}
+        Y: {type: :float, value: 0.713139057159424}
+        Z: {type: :float, value: 0.0225600246340036}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 28.6536254882812}
+        Y: {type: :float, value: 87.1099395751953}
+        Z: {type: :float, value: 0.241132259368896}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 40.7731819152832}
+        Y: {type: :float, value: 86.710319519043}
+        Z: {type: :float, value: 7.38418577839184e-07}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 52.4071311950684}
+        Y: {type: :float, value: 88.4939193725586}
+        Z: {type: :float, value: 2.38418579101562e-07}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 37.3513221740723}
+    YPosition: {type: :float, value: 5.0739312171936}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: gnoll_jaeger1}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0215002540498972}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.36846923828125}
+        Y: {type: :float, value: -4.82179069519043}
+        Z: {type: :float, value: 0.0215002540498972}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 15.5044708251953}
+        Y: {type: :float, value: -4.83790016174316}
+        Z: {type: :float, value: 0.0225597862154245}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 15.1225051879883}
+        Y: {type: :float, value: 1.56999921798706}
+        Z: {type: :float, value: 0.0225597862154245}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnollschuetzen
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 20.0509166717529}
+        Y: {type: :float, value: 92.095588684082}
+        Z: {type: :float, value: 5.0}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 20.0315856933594}
+        Y: {type: :float, value: 78.1494064331055}
+        Z: {type: :float, value: 5.0}
+    Tag: {type: :cexostr, value: Gnollschuetzen}
+    TemplateResRef: {type: :resref, value: gnollschuetzen}
+    XPosition: {type: :float, value: 37.5034523010254}
+    YPosition: {type: :float, value: 6.17662191390991}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.799659729003906}
+        Y: {type: :float, value: -23.4560356140137}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 4.12725830078125}
+        Y: {type: :float, value: -23.1025581359863}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 3.78477478027344}
+        Y: {type: :float, value: 0.0077667236328125}
+        Z: {type: :float, value: 0.025000000372529}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 57.1043815612793}
+        Y: {type: :float, value: 52.5830879211426}
+        Z: {type: :float, value: 4.99999998737621e-07}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 50.714672088623}
+        Y: {type: :float, value: 50.826099395752}
+        Z: {type: :float, value: 3.8079070918684e-07}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 95.6921691894531}
+    YPosition: {type: :float, value: 72.4246978759766}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
