--- a/mod/area/gabelstr_nord_03.git.yml
+++ b/mod/area/gabelstr_nord_03.git.yml
@@ -183,6 +183,259 @@ Encounter List:
     XPosition: {type: :float, value: 25.8064994812012}
     YPosition: {type: :float, value: 7.2217001914978}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: gnoll_jaeger1}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: -0.61639404296875}
+        Y: {type: :float, value: -7.37006044387817}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 14.2255954742432}
+        Y: {type: :float, value: -7.38994979858398}
+        Z: {type: :float, value: 0.0215002540498972}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 14.7344379425049}
+        Y: {type: :float, value: 1.29029846191406}
+        Z: {type: :float, value: 0.0215000156313181}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025000000372529}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnollschuetzen
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 20.3357810974121}
+        Y: {type: :float, value: 44.5680847167969}
+        Z: {type: :float, value: 4.99058437347412}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 23.6292991638184}
+        Y: {type: :float, value: 57.3909301757812}
+        Z: {type: :float, value: 4.20898008346558}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 36.6888084411621}
+        Y: {type: :float, value: 59.6025390625}
+        Z: {type: :float, value: 5.0}
+    Tag: {type: :cexostr, value: Gnollschuetzen}
+    TemplateResRef: {type: :resref, value: gnollschuetzen}
+    XPosition: {type: :float, value: 27.4732570648193}
+    YPosition: {type: :float, value: 7.64615058898926}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: -0.00656890869140625}
+        Y: {type: :float, value: -7.40884494781494}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 13.9836273193359}
+        Y: {type: :float, value: -7.16788053512573}
+        Z: {type: :float, value: 0.0215000156313181}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 14.3278999328613}
+        Y: {type: :float, value: 1.60582828521729}
+        Z: {type: :float, value: 0.025000499561429}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025000000372529}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 26.7435436248779}
+        Y: {type: :float, value: 47.1107864379883}
+        Z: {type: :float, value: 1.13420391082764}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 33.370475769043}
+        Y: {type: :float, value: 51.9582710266113}
+        Z: {type: :float, value: 0.348316192626953}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 39.6305770874023}
+        Y: {type: :float, value: 53.6315040588379}
+        Z: {type: :float, value: 0.952601492404938}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 27.6109428405762}
+    YPosition: {type: :float, value: 8.74443054199219}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: -1.02376174926758}
+        Y: {type: :float, value: -4.94081878662109}
+        Z: {type: :float, value: 1.02909314632416}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 13.461311340332}
+        Y: {type: :float, value: -4.77066040039062}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 13.6644096374512}
+        Y: {type: :float, value: -0.047454833984375}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025000000372529}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 69.7715454101562}
+        Y: {type: :float, value: 51.5630683898926}
+        Z: {type: :float, value: 9.76837100097327e-07}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 49.073371887207}
+    YPosition: {type: :float, value: 98.5270538330078}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
