--- a/mod/area/gabelstr_nord_04.git.yml
+++ b/mod/area/gabelstr_nord_04.git.yml
@@ -109,6 +109,177 @@ Encounter List:
     XPosition: {type: :float, value: 38.2958984375}
     YPosition: {type: :float, value: 12.1833000183105}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: -3.24552202224731}
+        Y: {type: :float, value: -14.4418354034424}
+        Z: {type: :float, value: 5.02500009536743}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.660166263580322}
+        Y: {type: :float, value: -14.6407356262207}
+        Z: {type: :float, value: 5.02500009536743}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 5.02500009536743}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: -3.2330060005188}
+        Y: {type: :float, value: -0.216602325439453}
+        Z: {type: :float, value: 5.02500009536743}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 44.3462562561035}
+        Y: {type: :float, value: 56.1122589111328}
+        Z: {type: :float, value: 13.2377510070801}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 53.7069969177246}
+        Y: {type: :float, value: 36.8352088928223}
+        Z: {type: :float, value: 5.45936012268066}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 43.9606895446777}
+        Y: {type: :float, value: 20.8215808868408}
+        Z: {type: :float, value: 0.0340428352355957}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 3.71650314331055}
+    YPosition: {type: :float, value: 42.3386764526367}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: -0.0181427001953125}
+        Y: {type: :float, value: -3.52468395233154}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 15.3436508178711}
+        Y: {type: :float, value: -2.87343168258667}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 15.1908531188965}
+        Y: {type: :float, value: 0.784899711608887}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0250000599771738}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 43.835693359375}
+        Y: {type: :float, value: 62.3029289245605}
+        Z: {type: :float, value: 15.0048837661743}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 30.8104343414307}
+        Y: {type: :float, value: 63.0700416564941}
+        Z: {type: :float, value: 15.0}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 36.5097732543945}
+    YPosition: {type: :float, value: 6.40617704391479}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
