--- a/mod/area/gabelstr_nord_05.git.yml
+++ b/mod/area/gabelstr_nord_05.git.yml
@@ -39,7 +39,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -276,8 +276,268 @@ Door List:
     Z: {type: :float, value: -0.170000001788139}
 Encounter List: 
   type: :list
-  value: []
-
+  value:
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    Comment: {type: :cexostr, value: ""}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 4.75882720947266}
+        Y: {type: :float, value: 0.209510803222656}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 4.77367401123047}
+        Y: {type: :float, value: 15.7315692901611}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.786399841308594}
+        Y: {type: :float, value: 15.5389995574951}
+        Z: {type: :float, value: 0.025000000372529}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 65.2668533325195}
+        Y: {type: :float, value: 15.8916320800781}
+        Z: {type: :float, value: 7.38418577839184e-07}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 54.0972213745117}
+        Y: {type: :float, value: 39.9932746887207}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 49.723819732666}
+        Y: {type: :float, value: 22.3611068725586}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 94.9462356567383}
+    YPosition: {type: :float, value: 27.3585186004639}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: gnoll_jaeger1}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 5.04013824462891}
+        Y: {type: :float, value: 1.1505298614502}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 4.97663879394531}
+        Y: {type: :float, value: 15.1333656311035}
+        Z: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.622817993164062}
+        Y: {type: :float, value: 14.6614723205566}
+        Z: {type: :float, value: 0.025000000372529}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnollschuetzen
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 59.0398826599121}
+        Y: {type: :float, value: 13.9782676696777}
+        Z: {type: :float, value: 5.59604643513012e-07}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 47.4897003173828}
+        Y: {type: :float, value: 22.5003452301025}
+        Z: {type: :float, value: -1.19209289550781e-07}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 46.3673133850098}
+        Y: {type: :float, value: 39.3238105773926}
+        Z: {type: :float, value: -0.00403492152690887}
+    Tag: {type: :cexostr, value: Gnollschuetzen}
+    TemplateResRef: {type: :resref, value: gnollschuetzen}
+    XPosition: {type: :float, value: 93.6237182617188}
+    YPosition: {type: :float, value: 27.2431526184082}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct
+    __data_type: GIT/Encounter List
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/CreatureList
+        __struct_id: 0
+        Appearance: {type: :int, value: 388}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: erfahrenergnollk}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: -0.47540283203125}
+        Y: {type: :float, value: 5.78715896606445}
+        Z: {type: :float, value: 10.0249996185303}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 10.0249996185303}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 2.05329895019531}
+        Y: {type: :float, value: -0.374942779541016}
+        Z: {type: :float, value: 10.0249996185303}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/Geometry
+        __struct_id: 1
+        X: {type: :float, value: 2.01195526123047}
+        Y: {type: :float, value: 5.88920974731445}
+        Z: {type: :float, value: 10.0249996185303}
+    LocalizedName:
+      type: :cexolocstr
+      value:
+        0: Gnolle
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 61.3883323669434}
+        Y: {type: :float, value: 36.865665435791}
+        Z: {type: :float, value: 0.00389981735497713}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: GIT/Encounter List/SpawnPointList
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 47.5107002258301}
+        Y: {type: :float, value: 50.3498001098633}
+        Z: {type: :float, value: 5.0}
+    Tag: {type: :cexostr, value: Gnolle}
+    TemplateResRef: {type: :resref, value: gnolle001}
+    XPosition: {type: :float, value: 97.566276550293}
+    YPosition: {type: :float, value: 57.1012268066406}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
